capstone/manifests/05-service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: capstone
spec:
  selector:
    app: backend
  ports:
    - port: 5432
      targetPort: 5432
