capstone/manifests/07-service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: capstone
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 8080
